# Analyzer

./: Cargo.toml  catto.txt  run.py  specification.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  main.rs
src/cli/: mod.rs  printer.rs
src/input_parser/: config_nom_parser.rs  id_nom_builder.rs  id_regex_builder.rs  mod.rs
src/mode/: handle_avg.rs  handle_cmp.rs  handle_range.rs  mod.rs  required_op.rs
src/util/: mod.rs
