[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="*", features=["derive"] }
regex = "*"
lazy_static = "*"
terminal-clipboard = "*"
atty = "*"
nom = "*"

[lib]
name="analyzer"
path="src/lib.rs"

[[bin]]
name="libanalyzer"
path="src/main.rs"