[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="*", features=["derive"] }
regex = "*"
lazy_static = "*"
terminal-clipboard = "*"
atty = "*"
nom = "*"
ansi_term = "*"

[lib]
name="libanalyzer"
path="src/lib.rs"

[[bin]]
name="analyzer"
path="src/main.rs"