[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.11", features=["derive"] }
regex = "*"
lazy_static = "*"
terminal-clipboard = "*"
atty = "*"
nom = "*"
ansi_term = "*"

[lib]
name="libanalyzer"
path="src/lib.rs"

[[bin]]
name="analyzer"
path="src/main.rs"